tests/rosetta/out/Smalltalk/babylonian-spiral.out
/workspace/mochi/tests/rosetta/out/Smalltalk/babylonian-spiral.st:4: invalid assignment to argument h
/workspace/mochi/tests/rosetta/out/Smalltalk/babylonian-spiral.st:45: parse error, expected integer literal or floating-point literal or decimal literal
